--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "movepro-backend",
   "version": "1.0.0",
@@ -11,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^148.0.0",
     "mongoose": "^7.0.4"
   },
   "devDependencies": {
