--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googleapis": "^148.0.0",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
